fix(GUI): input labels background colors overlap (PR #2236 Fixes #2222)

--- a/src/renderer/assets/styles/components/allPublicationsPage.scss
+++ b/src/renderer/assets/styles/components/allPublicationsPage.scss
@@ -52,7 +52,7 @@
 
                 label {
                     background-color: var(--color-extralight-grey);
-                    top: -18px;
+                    // top: -18px;
                 }
 
                 i {
