--- a/src/renderer/assets/styles/components/catalogs.scss
+++ b/src/renderer/assets/styles/components/catalogs.scss
@@ -240,7 +240,7 @@
 
     label {
         background-color: var(--color-extralight-grey)!important;
-        top: -18px!important;
+        // top: -18px!important;
     }
 
     @media screen and (width <= 1024px) {
